# postgres-query-benchmarking

./: .env.example  .gitignore  Cargo.toml  README.md
scripts/: cold_query_init.sql  optimized_init.sql  setup.sh  setup_test_db.sql
src/: lib.rs  main.rs
src/benchmarks/: any_array.rs  chunked_prepared.rs  mod.rs  raw_sql_large_in.rs  temp_table_any.rs  temp_table_binary_copy.rs  temp_table_binary_no_index.rs  temp_table_join.rs  temp_table_optimized_binary.rs  temp_table_text_copy.rs  unnest_array.rs
