[package]
name = "pg-hacking"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "migrate",
    "uuid",
] }
thiserror = "1.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.17.0", features = ["serde", "v7"] }
