[package]
name = "pg-hacking"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
hex = "0.4.3"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.9"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "migrate",
    "uuid",
] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# [profile.release]
# lto = true
# codegen-units = 1
